--- a/static/bower.json
+++ b/static/bower.json
@@ -6,13 +6,14 @@
   ],
   "private": true,
   "dependencies": {
-    "angular": "~1.6.5",
-    "angular-cookies": "~1.5.0",
-    "angular-resource": "~1.5.0",
-    "angular-route": "~1.5.0",
-    "angular-loader": "~1.5.0",
-    "angular-mocks": "~1.5.0",
-    "angular-sanitize": "~1.5.0",
-    "ng-showdown": "~1.1.0"
+    "angular": "1.5.8",
+    "angular-cookies": "1.5.8",
+    "angular-resource": "1.5.8",
+    "angular-route": "1.5.8",
+    "angular-loader": "1.5.8",
+    "angular-mocks": "1.5.8",
+    "angular-sanitize": "1.5.8",
+    "showdown": "1.6.4",
+    "ng-showdown": "1.1.0"
   }
 }
