Running angular tests at build time
Summary: Using PhantomJS to run headless tests at build time, so no browser is required to be installed.

Test Plan: Triggered a Jenkins build with the changes and verified tests run succefully. Will verify the same after landing and just check the site is up after deploying.

Reviewers: dwe

Reviewed By: dwe

Subscribers: #scieng

Differential Revision: https://phabricator.internal.justin.tv/D5609

--- a/static/package.json
+++ b/static/package.json
@@ -15,13 +15,12 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-firefox-launcher": "~1.0.0",
     "karma-jasmine": "~1.1.0",
-    "karma-junit-reporter": "~1.2.0"
+    "karma-junit-reporter": "~1.2.0",
+    "karma-phantomjs-launcher": "~1.0.4"
   },
   "scripts": {
-    "postinstall": "bower install",
-
-    "pretest": "npm install",
-    "test": "karma start karma.conf.js",
-    "test-single-run": "karma start karma.conf.js --single-run"
+    "postinstall": "bower --allow-root install",
+    "test-single-run": "karma start karma.conf.js --single-run",
+    "test-single-headless": "karma start karma.conf.js --single-run --browsers PhantomJS"
   }
 }
